--- a/APP_DUAL.csproj
+++ b/APP_DUAL.csproj
@@ -199,5 +199,8 @@
       <Name>Libreria_Clases_DUAL_1</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\MESSI_KeyPadBG.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
